mobile info alignment fixed

--- a/client/src/components/AdminDashboard/viewprofile.css
+++ b/client/src/components/AdminDashboard/viewprofile.css
@@ -74,6 +74,7 @@
     padding-top: 1.2rem;
     padding-left: .9rem;
     font-size: 1.2rem;
+    text-align: left;
 }
 
 .studentviews div {
@@ -81,6 +82,7 @@
     grid-template-columns: repeat(2,1fr);
     justify-items: start;  
     padding-bottom: 0.6rem;
+    align-items: center;
 }
 
 .studentviews h4 {
